--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -53,7 +53,7 @@
 \ctufitprogram{Informatika} % replace with your study program
 \ctufitspecialisation{Webové inženýrství} % replace with your specialisation
 \ctufityear{2026} % replace with the year of your defence
-\ctufitdeclarationplace{Praze} % replace with the place where you sign the declaration
+\ctufitdeclarationplace{Prahe} % replace with the place where you sign the declaration
 \ctufitdeclarationdate{\today} % replace with the date of signature of the declaration
 \ctufitabstractCZE{Fill in the abstract of this thesis in Czech. Lorem ipsum dolor sit amet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Suspendisse sagittis ultrices augue.}
 \ctufitabstractENG{Fill in the abstract of this thesis in English. Lorem ipsum dolor sit amet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Suspendisse sagittis ultrices augue.}
@@ -109,19 +109,20 @@
 \usepackage{listings} % typesetting of sources
 %\usepackage{minted}
 \usepackage{csquotes}
+\usepackage{enumitem}
 
 %%%%%%%%%%%%%%%%%%%%%%
 % PACKAGES SETTINGS END
 %%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
-\frontmatter\frontmatterinit % do not remove these two commands
+\frontmatter\frontmatterinit% do not remove these two commands
 
-\thispagestyle{empty}\maketitle\thispagestyle{empty}\cleardoublepage % do not remove these four commands
+\thispagestyle{empty}\maketitle\thispagestyle{empty}\cleardoublepage% do not remove these four commands
 
 \includepdf[pages={1-}]{example-assignment-include.pdf} % replace this file with your thesis assignment generated from ProjectsFIT
 
-\imprintpage % do not remove this command
+\imprintpage% do not remove this command
 \stopTOCentries
 
 %%%%%%%%%%%%%%%%%%%
@@ -145,9 +146,11 @@
 % ENG: choose one of approved texts of the declaration. DO NOT CREATE YOUR OWN. Find the approved texts at https://courses.fit.cvut.cz/SFE/download/index.html#_documents (document Declaration for FT in English)
 % CZE/SLO: Vyberte jedno z fakultou schvalenych prohlaseni. NEVKLADEJTE VLASTNI TEXT. Schvalena prohlaseni najdete zde: https://courses.fit.cvut.cz/SZZ/dokumenty/index.html#_dokumenty (prohlášení do ZP)
 \begin{declarationpage}
-	FILL IN ACCORDING TO THE INSTRUCTIONS. VYPLŇTE V SOULADU S POKYNY. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur sagittis hendrerit ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Suspendisse sagittis ultrices augue. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. In sem justo, commodo ut, suscipit at, pharetra vitae, orci. Pellentesque pretium lectus id turpis.
+	Prohlašuji, že jsem předloženou práci vypracoval samostatně a že jsem uvedl veškeré použitéinformační zdroje v souladu s Metodickým pokynem o dodržování etických principů při přípravěvysokoškolských závěrečných prací.
 
-	Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur sagittis hendrerit ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Suspendisse sagittis ultrices augue. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. In sem justo, commodo ut, suscipit at, pharetra vitae, orci. Pellentesque pretium lectus id turpis.
+	Beru na vědomí, že se na moji práci vztahují práva a povinnosti vyplývající ze zákona č. 121/2000 Sb., autorského zákona, ve znění pozdějších předpisů. V souladu s ust. § 2373 odst. 2 zákona č. 89/2012 Sb., občanský zákoník, ve znění pozdějších předpisů, tímto uděluji nevýhradní oprávnění (licenci) k užití této mojí práce, a to včetně všech počítačových programů, jež jsou její součástí či přílohou a veškeré jejich dokumentace (dále souhrnně jen „Dílo“), a to všem osobám, které si přejí Dílo užít. Tyto osoby jsou oprávněny Dílo užít jakýmkoli způsobem, který nesnižuje hodnotu Díla a za jakýmkoli účelem (včetně užití k výdělečným účelům). Toto oprávnění je časově, teritoriálně i množstevně neomezené.
+
+	Prohlašuji, že jsem v průběhu příprav a psaní závěrečné práce použil/-a nástroje umělé inteligence. Vygenerovaný obsah jsem ověřil/-a. Stvrzuji, že jsem si vědom/-a, že za obsah závěrečné práce plně zodpovídám.
 \end{declarationpage}
 %%%%%%%%%%%%%%%%%%%
 % DECLARATION END
