--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -1,6 +1,16 @@
 \chapter{Analýza}
 
 \section{Stupne Napredovania}
+Stupne napredovania sú programovou časťou slovenského skautingu. Tvoria základný kameň programu a osobného rastu. Sú určené pre deti a dospievajúcich od 4 rokov až po 24 rokov. Program je rozčlenený do nasledujúcich vekových kategórií:
+\begin{itemize}
+    \item[4 - 6 rokov] Janík a Grétka
+    \item[7 - 10 rokov] Vlčia stopa
+    \item[11 - 14 rokov] Skautský chodník
+    \item[15 - 18 rokov] Rangerský horizont
+    \item[19 - 24 rokov] Roverský svet
+    \item[11+ rokov] Nováčik - pre všetkých nových členov v Slovenskom skautingu.
+\end{itemize}
+
 
 \section{Prípady použitia}
 
@@ -19,8 +29,14 @@
         Zo zoznamu úloh si môže pridať nové úlohy medzi sledované.
         Po dokončení úlohy sa mu úloha odstráni zo sledovaných.
     }
-    \usecase{Skaut, Radca, Zborový}{Vlastná úloha}{
-
+    \usecase{Skaut, Radca}{Vlastná úloha}{
+        Skaut zvolí úlohu ktorú chce nahradiť, navrhne nové znenie, úplne nové alebo úprava stávajúceho, a pošle ho radcovi na schválenie.
+        V procese schvaľovania môžu ešte znenie novej úlohy pozmeniť. 
+        Keď úloha zodpovedá očakávanej náročnosti, tak ju schváli a skautovi sa pridá medzi aktívne úlohy.
+    }
+    \usecase{Skaut, Radca}{Splnenie úlohy}{
+        Po splnení úlohy môže nastať schvaľovanie splnenia zo strany radcu.
+        Radca môže zadať hromadné splnenie úlohy členom svojej družiny.
     }
     \usecase{Radca}{Moja družina}{
         Používateľovi sa zobrazí postup všetkých členov jeho družiny.
@@ -29,6 +45,6 @@
         Používateľovi sa zobrazia všetci členovia jeho zboru a môže spravovať ich priradenie do družín. Nastavuje Družinových radcov.
     }
     \usecase{Programový}{Úprava programu}{
-        
+        Pri zmenách vo vdelávacio výchovnom programe môže programový vedúci zmeniť, pridať alebo odstrániť časti programu. Prípadne môže vytvoriť úplne nový program alebo zrušiť už existujúci.
     }
 \end{usecases}
