--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -48,3 +48,6 @@ Stupne napredovania sú programovou časťou slovenského skautingu. Tvoria zák
         Pri zmenách vo vdelávacio výchovnom programe môže programový vedúci zmeniť, pridať alebo odstrániť časti programu. Prípadne môže vytvoriť úplne nový program alebo zrušiť už existujúci.
     }
 \end{usecases}
+
+\section{Zber požiadaviek}
+Zber požiadaviek 
