--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -2,14 +2,14 @@
 
 \section{Stupne Napredovania}
 Stupne napredovania sú programovou časťou slovenského skautingu. Tvoria základný kameň programu a osobného rastu. Sú určené pre deti a dospievajúcich od 4 rokov až po 24 rokov. Program je rozčlenený do nasledujúcich vekových kategórií:
-\begin{itemize}
+\begin{description}
     \item[4 - 6 rokov] Janík a Grétka
     \item[7 - 10 rokov] Vlčia stopa
     \item[11 - 14 rokov] Skautský chodník
     \item[15 - 18 rokov] Rangerský horizont
     \item[19 - 24 rokov] Roverský svet
     \item[11+ rokov] Nováčik - pre všetkých nových členov v Slovenskom skautingu.
-\end{itemize}
+\end{description}
 
 
 \section{Prípady použitia}
