--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -11,6 +11,8 @@ Stupne napredovania sú programovou časťou slovenského skautingu. Tvoria zák
     \item[11+ rokov] Nováčik - pre všetkých nových členov v Slovenskom skautingu.
 \end{description}
 
+\subsection{Skautský chodník}
+Skautský chodník je rozdelený na tri časti Prvý skaut, Neznáme cesty a Posledný vrchol. 
 
 \section{Prípady použitia}
 
