skautsky chodnik obecne

--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -24,6 +24,10 @@ Zdravie a sila (žltá) sa zaoberá fyzickou kondíciou a životom na tábore.
 
 Schopnosti a zručnosti (zelená) je dedikovaná intelektuálnemu rozvoju a základným schopnostiam ktoré by mal poznať každý ako napríklad varenie.
 
+Každá kategória obsahuje kapitoly ktoré predávajú čitateľovi myšlienku a snažia sa ho niečo nové naučiť. Záverom kapitoly je sada úloh ktoré musí skaut splniť na to aby splnil celú kategóriu. V prípade že by skautovi prišli úlohy moc náročné alebo nemožné splniť, môže požiadať radcu družiny alebo vedúceho o upravenie danej úlohy. Úprava úlohy by mala zachovať obtiažnosť a tému pôvodnej úlohy.
+
+Vyhodnocovanie úloh záleží od jednotlivých úloh. Existujú tri druhy overenia splnenia úlohy. Overenie radcom družiny alebo vedúcim, overenie rodičom skauta a overenie skautom samotným pri čom sa spolieha na jeho skautskú česť. Na úlohách sa cení snaha viac ako samotný výsledok úlohy.
+
 \section{Prípady použitia}
 
 \newlist{usecases}{enumerate}{1}
