stupne napredovania almost finished

--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -12,13 +12,12 @@
   url           = {http://www.mdpi.com/2078-2489/9/1/12},
 }
 
-@book{Crochemore2002,
-  author        = {Maxime Crochemore and Wojciech Rytter},
-  title         = {Jewels of stringology},
-  publisher     = {World Scientific},
-  address       = {Ri\-ver Edge, NJ},
-  year          = {2002},
-  isbn          = {978-9810247829},
+@book{prvy_skaut,
+  author        = {Ján Mitrík and Wojciech Rytter},
+  title         = {Prvý skaut},
+  publisher     = {Slovenský skauting},
+  year          = {2017},
+  isbn          = {978-80-89776-12-2},
 }
 
 @book{Motwani2014,
