--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -28,6 +28,21 @@ Každá kategória obsahuje kapitoly ktoré predávajú čitateľovi myšlienku 
 
 Vyhodnocovanie úloh záleží od jednotlivých úloh. Existujú tri druhy overenia splnenia úlohy. Overenie radcom družiny alebo vedúcim, overenie rodičom skauta a overenie skautom samotným pri čom sa spolieha na jeho skautskú česť. Na úlohách sa cení snaha viac ako samotný výsledok úlohy.
 
+Po splnení určitého množstva úloh sa odomyká skautovi možnosť plniť výzvu z danej kategórie. Každá kategória má vlastnú výzvu.
+
+\subsubsection{Prvý skaut}
+Prvý skuat predstavuje prvú časť skautského chodníka. Očakávaný vek skauta ktorý plní Prvého skauta je medzi 11 a 12 rokov. Veku skauta odpovedá aj forma ktorou je vedený Prvý skaut. V rámci Prvého skauta sú všetky úlohy predom dané a skaut nemá žiadnu voľbu čo by plnil. Kapitoly obshaujú veľa rozprávania a témam sa venujú skôr povrchne. Výzvy sa odomykajú po splnení všetkých úloh v danej kategórii.
+
+\subsubsection{Neznáme cesty}
+Neznáme cesty predstavujú druhú časť skautského chodníka na ktorý nadväzujú. Oproti Prvému skautovi poskytujú skautovi väčšiu voľnosť vo výbere úloh. Každá úloha má počet bodov ktoré skaut dosiahne za jej splnenie. Cieľom každej kategórie je nazbieranie potrebného počtu bodov z úloh z danej kategórie. Každá kapitola obshuje jednu povinnú úlohu a sadu nepovinných úloh z ktorých si môže skaut vybrať. Výzvy sa odomykajú po splnení povinných úloh z danej kategórie.
+
+\subsubsection{Posledný vrchol}
+Posledný vrchol je posledná a záverečná časť skautského chodníka. Predstavuje najväčšiu volňnosť vo výbere úloh z celého skautského chodníka. Obsahom kapitol je podobná Neznámym cestám.
+
+\subsection{Rangerský horizont}
+Rangerský horizont sa skladá z troch častí. Osobný rozvoj, rangerský projekt a expedícia. Tieto časti predstavujú zákldaný rámec no ich obsah si ranger volí sám po dohode s vedúcim.
+
+
 \section{Prípady použitia}
 
 \newlist{usecases}{enumerate}{1}
