add chapter skeleton

--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -238,6 +238,10 @@
 
 % \include{text/text} % include `text.tex' from `text/' subdirectory
 \include{text/chapter1_analyza} % include `text.tex' from `text/' subdirectory
+\include{text/chapter2_navrh}
+\include{text/chapter3_implementacia}
+\include{text/chapter4_testovanie}
+\include{text/chapter5_zaver}
 % \include{text/text} % include `text.tex' from `text/' subdirectory
 
 \appendix\appendixinit % do not remove these two commands
