--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -37,10 +37,16 @@ Prvý skuat predstavuje prvú časť skautského chodníka. Očakávaný vek ska
 Neznáme cesty predstavujú druhú časť skautského chodníka na ktorý nadväzujú. Oproti Prvému skautovi poskytujú skautovi väčšiu voľnosť vo výbere úloh. Každá úloha má počet bodov ktoré skaut dosiahne za jej splnenie. Cieľom každej kategórie je nazbieranie potrebného počtu bodov z úloh z danej kategórie. Každá kapitola obshuje jednu povinnú úlohu a sadu nepovinných úloh z ktorých si môže skaut vybrať. Výzvy sa odomykajú po splnení povinných úloh z danej kategórie.
 
 \subsubsection{Posledný vrchol}
-Posledný vrchol je posledná a záverečná časť skautského chodníka. Predstavuje najväčšiu volňnosť vo výbere úloh z celého skautského chodníka. Obsahom kapitol je podobná Neznámym cestám.
+Posledný vrchol je posledná a záverečná časť skautského chodníka. Predstavuje najväčšiu volňnosť vo výbere úloh z celého skautského chodníka v podobe povinných a voliteľných kapitól. Obsahom kapitol je podobná Neznámym cestám. Na rozdiel od Neznámych ciest v rámci Posledného vrcholu stačí skutovi nazbierať celkový počet naprieč všetkými kategóriami. Má takto najväčšiu volňnosť vo výslednej podobe jeho priechodu Posledným vrcholom.
 
 \subsection{Rangerský horizont}
-Rangerský horizont sa skladá z troch častí. Osobný rozvoj, rangerský projekt a expedícia. Tieto časti predstavujú zákldaný rámec no ich obsah si ranger volí sám po dohode s vedúcim.
+Rangerský horizont je koncipovaný na maximálne 3 roky. Skladá sa z piatich častí. Osobný rozvoj I, osobný rozvoj II, expedícia I, expedícia II a rangerský projekt. Osobný rast 
+
+
+\section{Odborky}
+Ďalšou programovou časťou sú odborky, ktoré fungujú nezávisle na stupňoch napredovania. Odborky predstavujú súbory úloh, ktorých splnenie vedie k nadobudnutiu odbornosti v danej téme. Delia sa do dvoch stupňov, zelený a červený. Pokiaľ odborka obsahuje zelený stupeň, treba ho získať pred splnením červeného stupňa. Odborky sú podobne ako stupne napredovania rozdelené do viacerých vekových kategórií. Sú prispôsobené charakteristikám a potrebám vekovej kategórie.
+
+\section{Výzvy}
 
 
 \section{Prípady použitia}
