Requirements from slsk, theory skeleton

--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -2,6 +2,13 @@
 
 \section{Softvérové inžinierstvo}
 
+\subsection{Životný cyklus vývoja softvéru SDLC}
+
+
+\subsection{Zber požiadaviek}
+
+
+
 \section{Webové inžinierstvo}
 
 \section{Tvorba použivateľského rozhrania}
