Found content to process for theory

--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -237,6 +237,7 @@
 %%%%%%%%%%%%%%%%%%%
 
 % \include{text/text} % include `text.tex' from `text/' subdirectory
+\include{text/chapter0_teoria} % include `text.tex' from `text/' subdirectory
 \include{text/chapter1_analyza} % include `text.tex' from `text/' subdirectory
 \include{text/chapter2_navrh}
 \include{text/chapter3_implementacia}
