--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -11,4 +11,54 @@
 
 \section{Webové inžinierstvo}
 
+\subsection{Klient-server architektúra}
+https://medium.com/nerd-for-tech/client-server-architecture-explained-with-examples-diagrams-and-real-world-applications-407e9e04e2d1
+https://www.coursera.org/articles/client-server-architecture
+https://www.ebsco.com/research-starters/architecture/client-server-architecture
+
+
+\subsection{API}
+https://www.ibm.com/think/topics/api
+https://aws.amazon.com/what-is/api/
+https://www.oracle.com/europe/cloud/cloud-native/api-management/what-is-api/
+
+\subsubsection{SOUP API}
+
+
+\subsubsection{RESTful API}
+
+
+\subsubsection{Graph API}
+
+
+\subsubsection{gRPC API}
+
+
 \section{Tvorba použivateľského rozhrania}
+
+
+
+\subsection{Základné prvky použivateľského rozhrania}
+https://www.nngroup.com/articles/ui-elements-glossary/
+
+
+\subsection{Low Fidelity prototyp}
+https://www.nngroup.com/articles/ux-prototype-hi-lo-fidelity/
+
+\subsection{High Fidelity prototyp}
+
+
+\subsection{Persóny}
+https://www.nngroup.com/articles/personas-study-guide/
+
+
+
+\section{Testovanie použivateľského rozhrania}
+
+
+\subsection{prispôsobenie testovania mladistvým}
+https://www.nngroup.com/articles/usability-testing-minors/
+https://www.nngroup.com/articles/usability-of-websites-for-teenagers/
+https://www.nngroup.com/articles/childrens-websites-usability-issues/
+https://www.nngroup.com/articles/kids-cognition/
+
