--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -42,10 +42,10 @@ https://www.oracle.com/europe/cloud/cloud-native/api-management/what-is-api/
 https://www.nngroup.com/articles/ui-elements-glossary/
 
 
-\subsection{Low Fidelity prototyp}
+\subsection{Prototyp s nízkou vernosťou}
 https://www.nngroup.com/articles/ux-prototype-hi-lo-fidelity/
 
-\subsection{High Fidelity prototyp}
+\subsection{Prototyp s vysokou vernosťou}
 
 
 \subsection{Persóny}
@@ -56,7 +56,7 @@ https://www.nngroup.com/articles/personas-study-guide/
 \section{Testovanie použivateľského rozhrania}
 
 
-\subsection{prispôsobenie testovania mladistvým}
+\subsection{Testovania mladistvým}
 https://www.nngroup.com/articles/usability-testing-minors/
 https://www.nngroup.com/articles/usability-of-websites-for-teenagers/
 https://www.nngroup.com/articles/childrens-websites-usability-issues/
