new requirements based on meeting

--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -40,6 +40,8 @@ Architekúra môže byť rozšírená o ďalšie prvky medzi serverom a klientom
 
 \subsubsection{gRPC API}
 
+\subsection{OAuth}
+
 \subsection{Backend ako služba}
 
 
