--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -108,6 +108,7 @@ Zber požiadaviek bol realizovaný .
     \requirement{Registrácia}{Funkčný}{Musí mať}{Aplikácia umožní registráciu nového používateľa.}
     \requirement{Prihlásenie}{Funkčný}{Musí mať}{Aplikácia umožní prihlásenie poučívateľa do jeho použivateľského účtu.}
     \requirement{Pridanie sa do družiny}{Funkčný}{Musí mať}{}
+    \requirement{Pridanie do družiny pomocou QR kódu}{}{}{}
     \requirement{Prezeranie programovej ponuky}{Funkčný}{Musí mať}{}
     \requirement{Pridanie časti programu do wishlistu}{Funkčný}{Musí mať}{}
     \requirement{Začať program z ponuky/wishlistu}{Funkčný}{Musí mať}{}
@@ -116,4 +117,5 @@ Zber požiadaviek bol realizovaný .
     \requirement{Moja družina - radca}{}{}{}
     \requirement{Upozornenie na začatie červeného stupňa odborky bez absolvovaného zeleného stupňa}{}{}{}
     \requirement{Zobrazenie výzvy}{}{}{}
+    \requirement{Poslat progres druziny na mail}{}{}{}
 \end{requirements}
