--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -3,7 +3,16 @@
 \section{Softvérové inžinierstvo}
 
 \subsection{Životný cyklus vývoja softvéru SDLC}
-
+Výber správnej metodológie pre SDLC kladie dôležitú rolu na úspech projektu. SDLC metodológie ponúkajú kostru ktorá sprevádza projekt naprieč návrhom, vývojom a implementáciou softvérového riešenia. SDLC je proces ktorý načŕta fázy a aktivity zapojené do tvorby softvéru od kenceptu cez development po údržbu. Medzi typické fázy SDLC patrí:
+\begin{description}
+    \item[Plánovanie] definuje rozsah a požiadavky projektu, indetifikuje kľúčových členov a ich role a vytvára plán projektu.
+    \item[Analýza] získava a okumentuje podrobné požiadavky od používateľov a kľúčových členov. Analyzuje zozbierané potreby na pochopenie funkčných a nefunkčných požiadavkov systému.
+    \item[Dizajn] vytvára architektúru aplikácie, definujúc vzájomné interakcie komponent. Navrhuje podobu používateľského rozhrania a používateľských skúsenosti.
+    \item[Implementácia] obsahuje vlastnú tvorbu kódu podľa vstupov z predchádzajúcich fázach.
+    \item[Testovanie] prebieha viacerých úrovniach od testovania jednotlivých častí až po systémové testy, ktoré testujú systém ako celok. V rámci testovania sa verifikuje splnenie požiadaviek.
+    \item[Nasadenie] do testovacieho a produkčného prostredia 
+    \item[Údržba a podpora]        
+\end{description}
 
 \subsection{Zber požiadaviek}
 
@@ -77,7 +86,10 @@ Existujú dva druhy prototypov podľa množstva prostriedkov potrebných na ich 
 
 
 \subsection{Persóny}
-https://www.nngroup.com/articles/personas-study-guide/
+Persońa je fiktívny, ale realistický popis typického používateľa produktu.
+
+
+% https://www.nngroup.com/articles/personas-study-guide/
 
 
 
