--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -8,11 +8,19 @@ Výber správnej metodológie pre SDLC kladie dôležitú rolu na úspech projek
     \item[Plánovanie] definuje rozsah a požiadavky projektu, indetifikuje kľúčových členov a ich role a vytvára plán projektu.
     \item[Analýza] získava a okumentuje podrobné požiadavky od používateľov a kľúčových členov. Analyzuje zozbierané potreby na pochopenie funkčných a nefunkčných požiadavkov systému.
     \item[Dizajn] vytvára architektúru aplikácie, definujúc vzájomné interakcie komponent. Navrhuje podobu používateľského rozhrania a používateľských skúsenosti.
-    \item[Implementácia] obsahuje vlastnú tvorbu kódu podľa vstupov z predchádzajúcich fázach.
+    \item[Implementácia] obsahuje vlastnú tvorbu kódu podľa výstupov z predchádzajúcich fáz napr., požiadavky, návrh UI a ďalších.
     \item[Testovanie] prebieha viacerých úrovniach od testovania jednotlivých častí až po systémové testy, ktoré testujú systém ako celok. V rámci testovania sa verifikuje splnenie požiadaviek.
-    \item[Nasadenie] do testovacieho a produkčného prostredia 
-    \item[Údržba a podpora]        
+    \item[Nasadenie] prebieha primárne v dvoch fázach, nasadenie do testovacieho prostredia a do ostrého prostredia. V rámci nasadenia sa rieši finálne prostredie v ktorom budú softvér využívať používatelia.
+    \item[Údržba a podpora] sa zameriava na monitorovanie a údržbu softvéru v produkčnom prostredí. Prebiehajú v nej opravy na chyby ktoré sa nenašli v rámci predchádzajúcich fáz. Prípadne sem môžu patriť vylepšenia na základe spätnej väzby od používateľov.
 \end{description}
+
+Metodológie SDLC sa líšia primárne v prístupe k týmto fázam. Medzi najnámejšie patrí vodopádová metóda, špirálová metóda, iteratívna metóda, inkrementálna metóda, prototypová metóda, metóda v tvare V, metóda rýchlej aplikácie a agilné metódy.
+
+Vodopád je typický lineárnym priechodom naprieč fázami, kde každá fáza začína po skončení predchádzajúcej. Tento prístup je vhodný na projekty s dobre definovanými požiadavkami na začiatku projektu, a prápadné zmeny sú len minimálné. Pevná štruktúra tejto metódy sa ťažko prispôsobuje zmenám po skončení fáze. Výhodou tejto metódy je dobrá odhadnuteľnosť prostriedkov a času na projekt.
+
+Špiralová metóda rozdeľuje projekt do série iterativných cyklov. V každom cykle sa postupne prejde cez všetky fáze. Na konci cyklu sa spraví vyhodnotenie a spolu so spätnou väzbou vstupujú do plánovania ďalšieho cyklu. Toto umožňuje vyššiu flexibiltu na zmeny. Hlavnou vlastnosťou špirálového modelu je jeho zemranie sa na analýzu rizík. Nevýhodou špirálového modelu je jeho komplexnosť a náročnosť na prostriedky. Zároveň mu chýbajú dobre stavené ciele oproti vodopádovej metóde.
+
+
 
 \subsection{Zber požiadaviek}
 
