--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -20,7 +20,11 @@ Vodopád je typický lineárnym priechodom naprieč fázami, kde každá fáza z
 
 Špiralová metóda rozdeľuje projekt do série iterativných cyklov. V každom cykle sa postupne prejde cez všetky fáze. Na konci cyklu sa spraví vyhodnotenie a spolu so spätnou väzbou vstupujú do plánovania ďalšieho cyklu. Toto umožňuje vyššiu flexibiltu na zmeny. Hlavnou vlastnosťou špirálového modelu je jeho zemranie sa na analýzu rizík. Nevýhodou špirálového modelu je jeho komplexnosť a náročnosť na prostriedky. Zároveň mu chýbajú dobre stavené ciele oproti vodopádovej metóde.
 
+Itertívna metóda sa zameriava na postupný vývoj a zdokonalenie softvéru pomocou iterativných cyklov. Umožňuje kontinuálne zlepšovanie a adaptáciu na zmenu požiadavkov. Výhodou je vytvorenie čiastočného no funkčného produktu na konci každej iterácie. Nevýhodou však môže byť prerastanie rozsahu projektu počas vývojového procesu čo môže viesť k prekročeniu rozpočtu a neskorým časom dodania.
 
+Inkrementálna metóda rozdelí na začiatku projekt na ucelené celky. Tieto celky sú následne vývíjané nezávisle a inrementy sú sekvenčne integrované do projektu. Hlavnou výhodou je možnosť paralalelizmu, no toto zároveň prináša väčsie nároky na koordinovanie tímu. Táto metóda je vhodná len na projekty ktoré umožňujú rozdelenie na nezávislé časti.
+
+Prototypová metóda 
 
 \subsection{Zber požiadaviek}
 
