all sdlc methodologies covered

--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -24,7 +24,15 @@ Itertívna metóda sa zameriava na postupný vývoj a zdokonalenie softvéru pom
 
 Inkrementálna metóda rozdelí na začiatku projekt na ucelené celky. Tieto celky sú následne vývíjané nezávisle a inrementy sú sekvenčne integrované do projektu. Hlavnou výhodou je možnosť paralalelizmu, no toto zároveň prináša väčsie nároky na koordinovanie tímu. Táto metóda je vhodná len na projekty ktoré umožňujú rozdelenie na nezávislé časti.
 
-Prototypová metóda 
+Prototypová metóda je charakterizovaná čo najrýchlejším vytvorením prototypuna získanie spätnej väzby od používateľov. Prototypová metóda obsahuje takisto viacero iterácií, kde spätná väzba z predchádzajúcej iterácie pomáha dotvárať požiadavky na ďalšiu iteráciu. Pravidelná spätná väzba prispieba k zlepšeniu komunikácie medzi vývojovým tímom a koncovými používateľmi. Medzi nevýhody patrí náročný odhad rozpočtu a dĺžky práce, s neznámim počtom iterácií vopred. Zároveň môžu používatelia nadobudnúť pocit že sa jedná o hotový systém aj keď v realite ide iba o prototyp.
+
+Metóda v tvare V je nadstavbou nad klasickou vodopádovou metódou. Oproti vodopádovej metóde obsahuje proces verifikácie a validácie ktorý je aktívny paralelne s hlavnými fázami vodopádovej metódy. Každá vývojová fáza má prislúchajúcu testovaciu fázu a až po skončení oboch sa prechádza do ďalšej fáze. Takto nastavený proces znižuje riziko vynechania nejakej veci pred pokračovaním vo vývoji.
+
+Metóda rýchlej aplikácie je druh inkrementálnej metódy so zameraním sa na čo najrýchlejšie vytvorenie aplikácie. Často sú používané nástroje na tvorbu kódu a vlastný kód je držaný na minime. Zároveň sa zameriava na modularizáciu softvéru a paralelný vývoj nezávislých modulov čo rapídne znižuje dobu vývoja. Táto metóda je vhodná pre väčšie tími kde je dostatok vývojarov na paralelný vývoj softvéru.
+
+Agilná metodológia reprezentuje rodinu iteratívnych a inkrementálnych metód ktoré prioritizujú adaptabilitu a sploprácu so zákazníkom. V základe rozdeľuje projekt na šprinty. Jeden šprint trvá typicky 1 až 4 týždne a predchádza mu scrum, čo je stretnutie na synchronizáciu vykonávanej práce. Agilný prístup zdieľa väčšinu výhod a nevýhod z ostatných iteratívnych metód.
+
+
 
 \subsection{Zber požiadaviek}
 
