--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -35,7 +35,11 @@ Agilná metodológia reprezentuje rodinu iteratívnych a inkrementálnych metód
 
 
 \subsection{Zber požiadaviek}
+Softvérové požiadavky predstavujú spôsob akým môžme zachytiť potreby zákazníka. Upresňujú nám rozsah projektu ako do funkcionilty ktorú zákazník očakáva, tak aj do formy akou budú tie funkcionality využité. Zároveň nám môžu upresňovať rozsah aj z opačnej strany v zmysle funkcionalít a vlastností ktoré softvér obsahovať nebude. Dotvára to celkový obraz zákazníkovi a predchádza sa pomocou toho nedorozumeniam. 
 
+Dôležitou úlohou na začiatku projeku je získavanie a dokumentácia požiadaviek. 
+% https://www.indeed.com/career-advice/career-development/requirement-gathering-techniques
+% https://medium.com/@marcus_davis/reliable-requirement-gathering-techniques-in-system-analysis-and-design-you-should-know-c28928dfced1
 
 
 \section{Webové inžinierstvo}
