requirements elicitations start

--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -37,9 +37,37 @@ Agilná metodológia reprezentuje rodinu iteratívnych a inkrementálnych metód
 \subsection{Zber požiadaviek}
 Softvérové požiadavky predstavujú spôsob akým môžme zachytiť potreby zákazníka. Upresňujú nám rozsah projektu ako do funkcionilty ktorú zákazník očakáva, tak aj do formy akou budú tie funkcionality využité. Zároveň nám môžu upresňovať rozsah aj z opačnej strany v zmysle funkcionalít a vlastností ktoré softvér obsahovať nebude. Dotvára to celkový obraz zákazníkovi a predchádza sa pomocou toho nedorozumeniam. 
 
-Dôležitou úlohou na začiatku projeku je získavanie a dokumentácia požiadaviek. 
+Dôležitou úlohou na začiatku projeku je získavanie a dokumentácia požiadaviek. Získavanie požiadaviek je proces ktorý prebieha v kooperácií so zákazníkom, kľúčovými členmi a používateľmi. Existuje viacero spôsobom ktorými sme schopní zozbierať tieto požiadavky.
+
+Rozhovory jeden na jednoho
+
+Skupinové rozhovory
+
+Brainstorming
+
+Cieľová skupina
+
+Dotazník
+
+workshop požiadaviek
+
+Sledovanie používateľa
+
+Analýza rozhrania
+
+Analýza dokumentov
+
+Spätné inžinierstvo
+
+Vytváranie prototypov
+
+
+
 % https://www.indeed.com/career-advice/career-development/requirement-gathering-techniques
 % https://medium.com/@marcus_davis/reliable-requirement-gathering-techniques-in-system-analysis-and-design-you-should-know-c28928dfced1
+
+\subsubsection{Kategorizácia požiadaviek}
+
 
 
 \section{Webové inžinierstvo}
