--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -67,7 +67,9 @@ Vytváranie prototypov
 % https://medium.com/@marcus_davis/reliable-requirement-gathering-techniques-in-system-analysis-and-design-you-should-know-c28928dfced1
 
 \subsubsection{Kategorizácia požiadaviek}
+Po zozbieraní požiadviek, prichádza na rad rozdelenie požiadaviek podľa rôznych metrík. Hlavnými metrikami zvyknú bývať dôležitosť požiadavky, na ktorú sa používa kategorizácia MoSCoW. Táto kategorizácia delí požiadavky na tie ktoré musia byť zapracované do softvéru, teda must have, tie ktoré by mali byť zapracované do systému, teda should have, tie ktoré by mohli byť vo výslednom softvéri, teda could have a do poslednej kategorizácie spadajú tie ktoré nebudú implementované do softvéru, teda won't have.
 
+Ďalšou metrikou je FURPS+, ktoré delí požiadavky na funkčné, používateľné, spoľahlivé, výkonostné a 
 
 
 \section{Webové inžinierstvo}
@@ -86,6 +88,7 @@ Architekúra môže byť rozšírená o ďalšie prvky medzi serverom a klientom
 
 
 \subsection{API}
+API, aplikačné programovacie rozhranie slúži na komunikácie medzi programami. 
 %https://www.ibm.com/think/topics/api
 % https://aws.amazon.com/what-is/api/
 % https://www.oracle.com/europe/cloud/cloud-native/api-management/what-is-api/
