skeleton of sections

--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -106,10 +106,12 @@ API, aplikačné programovacie rozhranie slúži na komunikácie medzi programam
 
 \subsection{OAuth}
 
+\subsection{Ako služba}
+
+\subsubsection{Typy služieb}
+
 \subsection{Backend ako služba}
 
-
-\subsection{}
 
 
 \section{Tvorba použivateľského rozhrania}
