--- a/text/chapter2_navrh.tex
+++ b/text/chapter2_navrh.tex
@@ -1,10 +1,25 @@
 \chapter{Návrh}
 Táto kapitola sa venuje návrhu frontendu a backendu. Návrh frontendu sa skladá z LoFi a HiFi prototypu. Návrh backandu sa skladá z návrhu API štruktúry.
 
+\section{Doménový model}
+
+\section{Procesy}
+
+
+\section{Architektúra aplikácie}
+
+
+\section{Voľba programovacieho jazyku}
+
 \section{LoFi prototyp}
 
 
+\section{Testovanie LoFi prototypu}
+
 \section{HiFi prototyp}
+
+
+\section{Testovanie HiFi prototypu}
 
 
 \section{API štruktúra}
