--- a/text/chapter1_analyza.tex
+++ b/text/chapter1_analyza.tex
@@ -1,61 +1,5 @@
 \chapter{Analýza}
 
-\section{Stupne Napredovania}
-Stupne napredovania sú programovou časťou slovenského skautingu. Tvoria základný kameň programu a osobného rastu. Sú určené pre deti a dospievajúcich od 4 rokov až po 24 rokov. Program je rozčlenený do nasledujúcich vekových kategórií:
-\begin{description}
-    \item[4 - 6 rokov] Janík a Grétka
-    \item[7 - 10 rokov] Vlčia stopa
-    \item[11 - 14 rokov] Skautský chodník
-    \item[15 - 18 rokov] Rangerský horizont
-    \item[19 - 24 rokov] Roverský svet
-    \item[11+ rokov] Nováčik - pre všetkých nových členov v Slovenskom skautingu.
-\end{description}
-
-\subsection{Skautský chodník}
-Skautský chodník sa delí na tri časti. Prvý skaut, Neznáme cesty a Posledný vrchol. Každá z týchto troch častí by mala zabrať rok.
-
-Skautský chodník sa zameriava na komplexný rozvoj jedinca naprieč rôznymi oblasťami. Pokrýva rozvoj zo svojho vnútra cez duchovný, citový a intelektuálny rozvoj, k rozvoju svojho vonkajšku pomocou telesného rozvoju až ku širšiemu sociálnemu rozvoju a buduje charakter. Pre jednoduchšie uchopenie je tento rozvoj koncipovaný do 4 kategórií.
-
-Charakter (modrá) je kategória zameraná na rozvoj osobnosti a hodnôt. Hlavnou súčasťou tejto kategórie je sociálny aspekt a to najmä v rámci družiny a oddielu. 
-
-Služba (červená) je kategória zameraná na ekológiu, rodinu a život v prírode a meste, spoznávanie rozmanitosti iných kultúr, zlepšovanie komunikačných schopností a duchovného dedičstva skautingu.
-
-Zdravie a sila (žltá) sa zaoberá fyzickou kondíciou a životom na tábore.
-
-Schopnosti a zručnosti (zelená) je dedikovaná intelektuálnemu rozvoju a základným schopnostiam ktoré by mal poznať každý ako napríklad varenie.
-
-Každá kategória obsahuje kapitoly ktoré predávajú čitateľovi myšlienku a snažia sa ho niečo nové naučiť. Záverom kapitoly je sada úloh ktoré musí skaut splniť na to aby splnil celú kategóriu. V prípade že by skautovi prišli úlohy moc náročné alebo nemožné splniť, môže požiadať radcu družiny alebo vedúceho o upravenie danej úlohy. Úprava úlohy by mala zachovať obtiažnosť a tému pôvodnej úlohy.
-
-Vyhodnocovanie úloh záleží od jednotlivých úloh. Existujú tri druhy overenia splnenia úlohy. Overenie radcom družiny alebo vedúcim, overenie rodičom skauta a overenie skautom samotným pri čom sa spolieha na jeho skautskú česť. Na úlohách sa cení snaha viac ako samotný výsledok úlohy.
-
-Po splnení určitého množstva úloh sa odomyká skautovi možnosť plniť výzvu z danej kategórie. Každá kategória má vlastnú výzvu.
-
-\subsubsection{Prvý skaut}
-Prvý skuat predstavuje prvú časť skautského chodníka. Očakávaný vek skauta ktorý plní Prvého skauta je medzi 11 a 12 rokov. Veku skauta odpovedá aj forma ktorou je vedený Prvý skaut. V rámci Prvého skauta sú všetky úlohy predom dané a skaut nemá žiadnu voľbu čo by plnil. Kapitoly obshaujú veľa rozprávania a témam sa venujú skôr povrchne. Výzvy sa odomykajú po splnení všetkých úloh v danej kategórii.
-
-\subsubsection{Neznáme cesty}
-Neznáme cesty predstavujú druhú časť skautského chodníka na ktorý nadväzujú. Oproti Prvému skautovi poskytujú skautovi väčšiu voľnosť vo výbere úloh. Každá úloha má počet bodov ktoré skaut dosiahne za jej splnenie. Cieľom každej kategórie je nazbieranie potrebného počtu bodov z úloh z danej kategórie. Každá kapitola obshuje jednu povinnú úlohu a sadu nepovinných úloh z ktorých si môže skaut vybrať. Výzvy sa odomykajú po splnení povinných úloh z danej kategórie.
-
-\subsubsection{Posledný vrchol}
-Posledný vrchol je posledná a záverečná časť skautského chodníka. Predstavuje najväčšiu volňnosť vo výbere úloh z celého skautského chodníka v podobe povinných a voliteľných kapitól. Obsahom kapitol je podobná Neznámym cestám. Na rozdiel od Neznámych ciest v rámci Posledného vrcholu stačí skutovi nazbierať celkový počet naprieč všetkými kategóriami. Má takto najväčšiu volňnosť vo výslednej podobe jeho priechodu Posledným vrcholom.
-
-\subsection{Rangerský horizont}
-Rangerský horizont je koncipovaný na maximálne 3 roky. Skladá sa z piatich častí. Osobný rozvoj I, osobný rozvoj II, expedícia I, expedícia II a rangerský projekt. Osobný rast I a II predstavuje podobnú sériu úloh s akou sa skaut stretol počas plnenia skautského chodníka. Slúži na ďalšie prekonávanie samého seba. Expedícia sa zameriava zas na spoznávanie okolia. Na splnenie expedície si je treba vybrať druh expedície na ktorý sa skuat vydá, xy pre I a za pre II. Projekt je určený na tímové riešenie danej problematiky ktorú si rangery zvolia a schváli im ju vodca.
-
-
-\section{Odborky}
-Ďalšou programovou časťou sú odborky, ktoré fungujú nezávisle na stupňoch napredovania. Odborky predstavujú súbory úloh, ktorých splnenie vedie k nadobudnutiu odbornosti v danej téme. Delia sa do dvoch stupňov, zelený a červený. Pokiaľ odborka obsahuje zelený stupeň, treba ho získať pred splnením červeného stupňa. Odborky sú podobne ako stupne napredovania rozdelené do viacerých vekových kategórií. Sú prispôsobené charakteristikám a potrebám vekovej kategórie.
-
-\section{Výzvy}
-Výzvy sú programovou časťou zameranou na prekonávanie samého seba. Vedú skuatov mimo ich komfortnú zónu a vystavujú ich situáciam ktoré nie sú bežné. Výzvy obsahujú ciele ktoré by mali skauti naplniť. Trvanie výziev je rôzne, pri niektorých sa jedná o jednorázovú aktivitu a pri iných zas o dlhodobejšie venovanie sa danej tématike.
-
-% https://www.skauting.sk/skauti/program/vyzvy/
-
-\section{Voľné programové moduly}
-Dobrovoľným rozšírením programu sú voľné programové moduly. Formou aj obsahom sa najviac približujú ku výzvam.
-
-\section{Najvyššie programové ocenenia}
-Vyvrcholením programovej činnosti pre vekovú kategóriu je najvyššie programové ocenenie, ktoré sa získava po splnení ostatných častí programu pre danú vekovú kategóriu. 
 
 \section{Prípady použitia}
 
@@ -85,6 +29,9 @@ Vyvrcholením programovej činnosti pre vekovú kategóriu je najvyššie progra
     }
     \usecase{Radca}{Moja družina}{
         Používateľovi sa zobrazí postup všetkých členov jeho družiny.
+    }
+    \usecase{Radca}{Pridanie člena do družiny}{
+        Radca môže pridť člena do družiny pomocou jeho mailu, alebo môže vytvoriť QR kód pomocou ktorého sa používateľ po prihlásení automaticky pridá do družiny.
     }
     \usecase{Zborový}{Môj zbor}{
         Používateľovi sa zobrazia všetci členovia jeho zboru a môže spravovať ich priradenie do družín. Nastavuje Družinových radcov.
