--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -1,4 +1,94 @@
 \chapter{Teoretický základ}
+Táto kapitola sa venuje predstaveniu prostredia Slovenského skautingu. Následne opisuje aplikácie zaoberajúce sa podobnou tématikou v prostredí iných krajín. Ďalej sú predstavené moderné technolólgie a metódy ktoré sú používané na vývoj aplikácií. 
+% predstav slovensky skauting
+% resers podobnych aplikacii
+% SDLC
+% requirements gathering
+% laptop vs smartphone
+% data synchronization
+% usability testing
+
+\section{Slovenský skauting}
+Slovenský skauting (ďalej SLSK) je dobrovoľná, nezávislá, nepolitická, nezisková, výchovná organizácia mladých ľudí, prístupná všetkým bez rozdielu pohlavia, pôvodu, národnosti, rasy alebo náboženstva, ktorí chcú žiť a konať v súlade s poslaním, princípmi a výchovnou metódou stanovenými zakladateľom hnutia Róbertom Baden-Powellom. 
+SLSK pôsobí najmä v oblasti výchovy detí a mládeže, neformálneho vzdelávania detí a mládeže, vzdelávania dobrovoľných a profesionálnych pracovníkov s mládežou, dospelých a mladých lídrov, občianskej participácie mladých ľudí na živote spoločnosti, cieľavedomej výchovy mladej generácie k demokracii, prevencie pred vznikom závislostí, ochrany životného prostredia, sociálnych aktivít a práce so znevýhodnenými skupinami obyvateľstva, podpory dobrovoľníctva mladých ľudí a voľnočasových aktivít pre mladých ľudí.
+
+\section{Program SLSK}
+Program v Slovenskom skautingu je zameraný na tvorbu odboriek, výziev, voľných programových modulov a príručiek osobného napredovania, ktoré vedúci využívajú na pravidelných stretnutiach s našimi členmi.
+Týmito aktivitami podporujeme naše vzdelávacie aktivity. 
+V roku 2024 sa organizácia v oblasti programu zamerala na dotlač a tvorbu nových publikácií, organizáciu programových akcií a prieskum o budúcom smerovaní a činnosti Programovej rady, ktorá koordinuje a zabezpečuje programové aktivity.
+
+\subsection{Stupne Napredovania}
+Stupne napredovania sú programovou časťou slovenského skautingu. Tvoria základný kameň programu a osobného rastu. Sú určené pre deti a dospievajúcich od 4 rokov až po 24 rokov. Program je rozčlenený do nasledujúcich vekových kategórií:
+\begin{description}
+    \item[4 - 6 rokov] Janík a Grétka
+    \item[7 - 10 rokov] Vlčia stopa
+    \item[11 - 14 rokov] Skautský chodník
+    \item[15 - 18 rokov] Rangerský horizont
+    \item[19 - 24 rokov] Roverský svet
+    \item[11+ rokov] Nováčik - pre všetkých nových členov v Slovenskom skautingu.
+\end{description}
+
+\subsubsection{Skautský chodník}
+Skautský chodník sa delí na tri časti. Prvý skaut, Neznáme cesty a Posledný vrchol. Každá z týchto troch častí by mala zabrať rok.
+
+Skautský chodník sa zameriava na komplexný rozvoj jedinca naprieč rôznymi oblasťami. Pokrýva rozvoj zo svojho vnútra cez duchovný, citový a intelektuálny rozvoj, k rozvoju svojho vonkajšku pomocou telesného rozvoju až ku širšiemu sociálnemu rozvoju a buduje charakter. Pre jednoduchšie uchopenie je tento rozvoj koncipovaný do 4 kategórií.
+
+Charakter (modrá) je kategória zameraná na rozvoj osobnosti a hodnôt. Hlavnou súčasťou tejto kategórie je sociálny aspekt a to najmä v rámci družiny a oddielu. 
+
+Služba (červená) je kategória zameraná na ekológiu, rodinu a život v prírode a meste, spoznávanie rozmanitosti iných kultúr, zlepšovanie komunikačných schopností a duchovného dedičstva skautingu.
+
+Zdravie a sila (žltá) sa zaoberá fyzickou kondíciou a životom na tábore.
+
+Schopnosti a zručnosti (zelená) je dedikovaná intelektuálnemu rozvoju a základným schopnostiam ktoré by mal poznať každý ako napríklad varenie.
+
+Každá kategória obsahuje kapitoly ktoré predávajú čitateľovi myšlienku a snažia sa ho niečo nové naučiť. Záverom kapitoly je sada úloh ktoré musí skaut splniť na to aby splnil celú kategóriu. V prípade že by skautovi prišli úlohy moc náročné alebo nemožné splniť, môže požiadať radcu družiny alebo vedúceho o upravenie danej úlohy. Úprava úlohy by mala zachovať obtiažnosť a tému pôvodnej úlohy.
+
+Vyhodnocovanie úloh záleží od jednotlivých úloh. Existujú tri druhy overenia splnenia úlohy. Overenie radcom družiny alebo vedúcim, overenie rodičom skauta a overenie skautom samotným pri čom sa spolieha na jeho skautskú česť. Na úlohách sa cení snaha viac ako samotný výsledok úlohy.
+
+Po splnení určitého množstva úloh sa odomyká skautovi možnosť plniť výzvu z danej kategórie. Každá kategória má vlastnú výzvu.
+
+\subsubsection{Prvý skaut}
+Prvý skuat predstavuje prvú časť skautského chodníka. Očakávaný vek skauta ktorý plní Prvého skauta je medzi 11 a 12 rokov. Veku skauta odpovedá aj forma ktorou je vedený Prvý skaut. V rámci Prvého skauta sú všetky úlohy predom dané a skaut nemá žiadnu voľbu čo by plnil. Kapitoly obshaujú veľa rozprávania a témam sa venujú skôr povrchne. Výzvy sa odomykajú po splnení všetkých úloh v danej kategórii.
+
+\subsubsection{Neznáme cesty}
+Neznáme cesty predstavujú druhú časť skautského chodníka na ktorý nadväzujú. Oproti Prvému skautovi poskytujú skautovi väčšiu voľnosť vo výbere úloh. Každá úloha má počet bodov ktoré skaut dosiahne za jej splnenie. Cieľom každej kategórie je nazbieranie potrebného počtu bodov z úloh z danej kategórie. Každá kapitola obshuje jednu povinnú úlohu a sadu nepovinných úloh z ktorých si môže skaut vybrať. Výzvy sa odomykajú po splnení povinných úloh z danej kategórie.
+
+\subsubsection{Posledný vrchol}
+Posledný vrchol je posledná a záverečná časť skautského chodníka. Predstavuje najväčšiu volňnosť vo výbere úloh z celého skautského chodníka v podobe povinných a voliteľných kapitól. Obsahom kapitol je podobná Neznámym cestám. Na rozdiel od Neznámych ciest v rámci Posledného vrcholu stačí skutovi nazbierať celkový počet naprieč všetkými kategóriami. Má takto najväčšiu volňnosť vo výslednej podobe jeho priechodu Posledným vrcholom.
+
+\subsection{Rangerský horizont}
+Rangerský horizont je koncipovaný na maximálne 3 roky. Skladá sa z piatich častí. Osobný rozvoj I, osobný rozvoj II, expedícia I, expedícia II a rangerský projekt. Osobný rast I a II predstavuje podobnú sériu úloh s akou sa skaut stretol počas plnenia skautského chodníka. Slúži na ďalšie prekonávanie samého seba. Expedícia sa zameriava zas na spoznávanie okolia. Na splnenie expedície si je treba vybrať druh expedície na ktorý sa skuat vydá, xy pre I a za pre II. Projekt je určený na tímové riešenie danej problematiky ktorú si rangery zvolia a schváli im ju vodca.
+
+
+\subsection{Odborky}
+Ďalšou programovou časťou sú odborky, ktoré fungujú nezávisle na stupňoch napredovania. Odborky predstavujú súbory úloh, ktorých splnenie vedie k nadobudnutiu odbornosti v danej téme. Delia sa do dvoch stupňov, zelený a červený. Pokiaľ odborka obsahuje zelený stupeň, treba ho získať pred splnením červeného stupňa. Odborky sú podobne ako stupne napredovania rozdelené do viacerých vekových kategórií. Sú prispôsobené charakteristikám a potrebám vekovej kategórie.
+
+\subsection{Výzvy}
+Výzvy sú programovou časťou zameranou na prekonávanie samého seba. Vedú skuatov mimo ich komfortnú zónu a vystavujú ich situáciam ktoré nie sú bežné. Výzvy obsahujú ciele ktoré by mali skauti naplniť. Trvanie výziev je rôzne, pri niektorých sa jedná o jednorázovú aktivitu a pri iných zas o dlhodobejšie venovanie sa danej tématike.
+
+% https://www.skauting.sk/skauti/program/vyzvy/
+
+\subsection{Voľné programové moduly}
+Dobrovoľným rozšírením programu sú voľné programové moduly. Formou aj obsahom sa najviac približujú ku výzvam.
+
+\subsection{Najvyššie programové ocenenia}
+Vyvrcholením programovej činnosti pre vekovú kategóriu je najvyššie programové ocenenie, ktoré sa získava po splnení ostatných častí programu pre danú vekovú kategóriu. 
+
+
+\section{Analýza podobných riešení}
+Celosvetovosť skautského hnutia dáva priestor na vznik viacerým organizáciam zaoberajúcich sa podobnou tématikou. Hľadanie už existujúcich riešení som realizoval vyhľadávaním na Google Play pre operačný systém android a na App Store pre iOS. Vyhľadávanie bolo pomocou kľúčových slov Scout Výsledkom  Jednou z najväčších organizácií v rámci hnutia je Boy Scouts of America. BSA obsahuje podobnú základnú ponuku ako SLSK v oblasti odboriek a najvyších programových ocenení. Na zobrazenie tejto ponuky existuje viacero aplikácií medzi inými Path to Eagle, ScoutChamp.
+
+% https://play.google.com/store/apps/details?id=scoutsandguides.scouts_and_guides&hl=en
+% https://play.google.com/store/apps/details?id=com.newryscouts.scoutskills&hl=en
+% https://play.google.com/store/apps/details?id=com.widesolutions.sidi&hl=en
+% https://apps.apple.com/cz/app/trooptrack-mobile/id1002622052
+% https://apps.apple.com/cz/app/troopwebhost/id1524044969
+% 
+
+\subsection{Path To Eagle}
+Path to Eagle je aplikácia na 
+
+\subsection{ScoutChamp}
 
 \section{Softvérové inžinierstvo}
 
